registration.mdx - changed inline link to a button bc inline links are hard to see

--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -125,7 +125,6 @@ lunch and Saturday breakfast and a lunch voucher for Saturday._
     </tr>
 </table>
 
-\* Residents and students in California are eligible for a complimentary Two-Day Expo Only Registration to attend the **Career Fair & Grad School Expo.** Please complete [this form](https://form.jotform.com/232814643539158) to sign up for a free ticket. *Exhibitors are not eligible.*
 
 The Expo-only pass grants access only to the Graduate School and Career Fair
 Expo on Friday, November 10 and Saturday, November 11. With over 100 sponsors
@@ -133,6 +132,14 @@ and exhibitors seeking diverse talent in STEM, our career and grad school expo
 is the premier LGBTQ+ in STEM event! List of exhibitors coming soon!
 
 If you would like to recruit at oSTEM, please email sponsorship@ostem.org.
+
+\* Residents and students in California are eligible for a complimentary Two-Day Expo Only Registration to attend the **Career Fair & Grad School Expo.** Please complete this form to sign up for a free ticket. *Exhibitors are not eligible.*
+
+<div className="my-2">
+  <CTAButton onClick="https://form.jotform.com/232814643539158">
+    CA Resident Expo Tickets
+  </CTAButton>
+</div>
 
 </TopicSquare>
 
