--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -31,7 +31,7 @@ us in a celebration of diversity across all fields.
 
 <div className="text-bright-peach font-bold text-center">
 
-## Conference and Expo Registration is OPEN!
+## Conference and Expo Registration closes October 27!
 
 </div>
 
@@ -40,12 +40,6 @@ us in a celebration of diversity across all fields.
     <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/">
       Register Today!
     </CTAButton>
-  </div>
-  <div className="my-1 sm:mx-2 mb-0.5">
-    <CTAButton onClick="https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611">
-      Book Your Room!
-    </CTAButton>
-  </div>
 </div>
 <br />
 
@@ -191,11 +185,14 @@ sponsorship@ostem.org.
 ## Hotel
 
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
+700 W Convention Way. <br /> Anaheim, CA 92802
+**The conference hotel room block is SOLD OUT:**
 
-**We highly recommend staying at the Anaheim Marriott Hotel to ensure you have
-the best conference experience possible. Benefits of staying at the conference
-hotel include:**
+While we cannot guarantee rate or availability, some conveniently located hotels to consider are:
+ - [Hilton Anaheim](https://www.hilton.com/en/hotels/snaahhh-hilton-anaheim/) (0.2 miles away from Anaheim Marriott) 
+ - [Homewood Suites](https://www.hilton.com/en/hotels/anadlhw-homewood-suites-anaheim-resort-convention-center/) (0.3 miles away from Anaheim Marriott)
 
+Benefits of conference hotel:
 - Minimize logistics and costs related to commuting to the venue
 - Quick and convenient access to your room between sessions (power naps,
   changing shoes, grabbing a phone charger, access to a fridge, etc.)
@@ -207,12 +204,8 @@ hotel include:**
 **Room availability is limited and reservations must be made before October
 15th. To ensure availability, reserve your room today.**
 
-700 W Convention Way. <br /> Anaheim, CA 92802
 
-<div className="my-2">
-  <CTAButton onClick="https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611">
-    Book Your Room Today!
-  </CTAButton>
+
 </div>
 
 **Room Rate:** $229/night up to four (4) occupants (does not include state &
