--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -37,7 +37,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <br />
       <b>
         {" "}
-        Regular conference registration pricing is available until Sunday, October 8, 2023. Late pricing is available October 9-27, 2023.{" "}
+        Conference registration closes October 27, 2023!{" "}
       </b>
     </p>
     <div className="text-xl flex justify-center p-2">
