--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -40,6 +40,7 @@ us in a celebration of diversity across all fields.
     <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/">
       Register Today!
     </CTAButton>
+  </div>
 </div>
 <br />
 
@@ -119,7 +120,6 @@ lunch and Saturday breakfast and a lunch voucher for Saturday._
     </tr>
 </table>
 
-
 The Expo-only pass grants access only to the Graduate School and Career Fair
 Expo on Friday, November 10 and Saturday, November 11. With over 100 sponsors
 and exhibitors seeking diverse talent in STEM, our career and grad school expo
@@ -127,7 +127,9 @@ is the premier LGBTQ+ in STEM event! List of exhibitors coming soon!
 
 If you would like to recruit at oSTEM, please email sponsorship@ostem.org.
 
-\* Residents and students in California are eligible for a complimentary Two-Day Expo Only Registration to attend the **Career Fair & Grad School Expo.** Please complete this form to sign up for a free ticket. *Exhibitors are not eligible.*
+\* Residents and students in California are eligible for a complimentary Two-Day
+Expo Only Registration to attend the **Career Fair & Grad School Expo.** Please
+complete this form to sign up for a free ticket. _Exhibitors are not eligible._
 
 <div className="my-2">
   <CTAButton onClick="https://form.jotform.com/232814643539158">
@@ -185,14 +187,20 @@ sponsorship@ostem.org.
 ## Hotel
 
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
-700 W Convention Way. <br /> Anaheim, CA 92802
-**The conference hotel room block is SOLD OUT:**
 
-While we cannot guarantee rate or availability, some conveniently located hotels to consider are:
- - [Hilton Anaheim](https://www.hilton.com/en/hotels/snaahhh-hilton-anaheim/) (0.2 miles away from Anaheim Marriott) 
- - [Homewood Suites](https://www.hilton.com/en/hotels/anadlhw-homewood-suites-anaheim-resort-convention-center/) (0.3 miles away from Anaheim Marriott)
+700 W Convention Way. <br /> Anaheim, CA 92802 **The conference hotel room block
+is SOLD OUT:**
+
+While we cannot guarantee rate or availability, some conveniently located hotels
+to consider are:
+
+- [Hilton Anaheim](https://www.hilton.com/en/hotels/snaahhh-hilton-anaheim/)
+  (0.2 miles away from Anaheim Marriott)
+- [Homewood Suites](https://www.hilton.com/en/hotels/anadlhw-homewood-suites-anaheim-resort-convention-center/)
+  (0.3 miles away from Anaheim Marriott)
 
 Benefits of conference hotel:
+
 - Minimize logistics and costs related to commuting to the venue
 - Quick and convenient access to your room between sessions (power naps,
   changing shoes, grabbing a phone charger, access to a fridge, etc.)
@@ -203,10 +211,6 @@ Benefits of conference hotel:
 
 **Room availability is limited and reservations must be made before October
 15th. To ensure availability, reserve your room today.**
-
-
-
-</div>
 
 **Room Rate:** $229/night up to four (4) occupants (does not include state &
 local taxes and fees)
