--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -199,6 +199,13 @@ to consider are:
 - [Homewood Suites](https://www.hilton.com/en/hotels/anadlhw-homewood-suites-anaheim-resort-convention-center/)
   (0.3 miles away from Anaheim Marriott)
 
+**Conference Hotel Room Block is Sold Out**
+- Check-in: 4:00 PM | Check-out: 11:00 AM
+- The room-block rate ended on **October 15th**.
+- For more information about the physical features of Anaheim Marriott's
+  accessible rooms, common areas or special services relating to a specific
+  disability please call +1 714-750-8000.
+
 Benefits of conference hotel:
 
 - Minimize logistics and costs related to commuting to the venue
@@ -208,18 +215,6 @@ Benefits of conference hotel:
 - Hotel employees will prepped by the oSTEM team for our event, address the
   specific needs of our LGBTQ+ community, and will be on hand to help with any
   concerns that arise related to lodging.
-
-**Room availability is limited and reservations must be made before October
-15th. To ensure availability, reserve your room today.**
-
-**Room Rate:** $229/night up to four (4) occupants (does not include state &
-local taxes and fees)
-
-- Check-in: 4:00 PM | Check-out: 11:00 AM
-- The room-block rate ends on **October 15th**.
-- For more information about the physical features of Anaheim Marriott's
-  accessible rooms, common areas or special services relating to a specific
-  disability please call +1 714-750-8000.
 
 For further conference and/or accessibility questions or concerns, please
 contact conference@ostem.org.
