--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -19,17 +19,17 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">Upcoming Dates</h3>
     </div>
     <p className="p-4">
-      <b>Full-Priced Registration:</b> August 15, 2023 - October 8, 2023 <br />
-      <b>Late Registration:</b> October 9 - October 27, 2023 <br />
       <b>Registration Cut-Off Date:</b> October 27, 2023 <br />
       <b>Chapter Award Nominations:</b> Closed September 8, 2023 <br />
       <b>Call for Posters:</b> Closed September 30, 2023 <br />
       <b>Early Bird Registration:</b> Closed August 14, 2023 <br />
+      <b>Full-Priced Registration:</b> August 15, 2023 - October 8, 2023 <br />
+      <b>Late Registration:</b> October 9 - October 27, 2023 <br />
     </p>
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
     <div className="bg-light-peach">
-      <h3 className="p-4">Conference Registration</h3>
+      <h3 className="p-4">Conference Registration Closes Soon</h3>
     </div>
     <p className="p-4">
       We are pleased to invite you to the 13th Annual Conference in Anaheim, California! We look forward to over 1,200 attendees across the world coming together for this four-day conference experience, taking place November 9 - 12, 2023 at the Anaheim Marriott. Check-in starts Thursday, November 9. Join us in a celebration of diversity across all fields.      
