--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -12,33 +12,6 @@ import Image from "next/image";
 
 <div className="text-bright-peach font-bold">
 
-## Student Travel Funding
-
-</div>
-
-Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. The deadline for Booz Allen Foundation funding has been extended to Monday, October 9, 2023.
-
-<br/>
-<div className="text-l flex justify-center p-2">
-    <CTAButton onClick="https://form.jotform.com/232484330296154/" backgroundColor="bright-peach">
-      View available awards
-    </CTAButton>
-</div>
-<br/>
-
-**Booz Allen Foundation: Travel Support - Extended to 10/6/2023** (student conference registrations or hotel bookings) 
- 
- * Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
-
-**Emerson Charitable Trust: Student Conference Registrations - Closed**
-
-  * Eligibility: Open to all LGBTQ+ students.
-  * Priority will be given to students traveling from the following states: FL, TX, TN, GA, AZ, OH, LA, SC, MT, NE, and MO.
-
-<br />
-
-<div className="text-bright-peach font-bold">
-
 ## Transportation
 
 </div>
@@ -281,6 +254,28 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
     Ventures Everywhere (EVE) </a> shuttle to Convention Way EB @ 700 W.
     Convention Way (05 Grand Plaza Line)
     - One-way fare is $15 pp | Round-trip is $30 pp
+
+<br />
+
+<div className="text-bright-peach font-bold">
+
+## Student Travel Fundingc Closed
+
+</div>
+
+Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. The deadline for Booz Allen Foundation funding has been extended to Monday, October 9, 2023.
+
+</div>
+<br/>
+
+**Booz Allen Foundation: Travel Support - Closed** (student conference registrations or hotel bookings) 
+ 
+ * Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
+
+**Emerson Charitable Trust: Student Conference Registrations - Closed**
+
+  * Eligibility: Open to all LGBTQ+ students.
+  * Priority will be given to students traveling from the following states: FL, TX, TN, GA, AZ, OH, LA, SC, MT, NE, and MO.
 
 <br />
 
