--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -80,8 +80,8 @@ times are Pacific Time and are subject to change.
 - **3:00 PM - 4:00 PM:** Mixers
 - **4:00 PM - 5:30 PM:** Plenary Keynote
 - **5:45 PM - 6:45 PM:** Workshop Block 6
-- **6:45 PM - 8:00 PM:** Evening Social hosted by oSTEM
 - **7:00 PM - 8:30 PM:** Evening Networking Reception (Sponsored)
+- **TBA:** Evening Social hosted by oSTEM
 
 <br />
 
