--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -72,7 +72,7 @@ times are Pacific Time and are subject to change.
 
 </div>
 
-- **TBA:** Registration Desk / Help Desk
+- **7:00 AM - 7:00 PM** Registration Desk / Help Desk
 - **8:00 AM - 9:30 AM:** Breakfast + Keynote+ Partner Award Ceremony
 - **9:45 AM - 10:45 AM:** Workshop Block 5
 - **11:00 AM - 4:00 PM:** Career and Graduate School Expo
