--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -259,7 +259,7 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
 
 <div className="text-bright-peach font-bold">
 
-## Student Travel Fundingc Closed
+## Student Travel Funding Closed
 
 </div>
 
