--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -19,7 +19,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">Upcoming Dates</h3>
     </div>
     <p className="p-4">
-      <b>Registration Cut-Off Date:</b> October 27, 2023 <br />
+      <b>Conference and Site Tour Registration Cut-Off Date:</b> October 27, 2023 <br />
       <b>Chapter Award Nominations:</b> Closed September 8, 2023 <br />
       <b>Call for Posters:</b> Closed September 30, 2023 <br />
       <b>Early Bird Registration:</b> Closed August 14, 2023 <br />
@@ -37,7 +37,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <br />
       <b>
         {" "}
-        Conference registration closes October 27, 2023!{" "}
+        Conference & site tour registration closes October 27, 2023!{" "}
       </b>
     </p>
     <div className="text-xl flex justify-center p-2">
