--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -29,7 +29,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
     <div className="bg-light-peach">
-      <h3 className="p-4">Conference Registration Closes Soon</h3>
+      <h3 className="p-4">Conference & Site Tour Registration Closes Soon</h3>
     </div>
     <p className="p-4">
       We are pleased to invite you to the 13th Annual Conference in Anaheim, California! We look forward to over 1,200 attendees across the world coming together for this four-day conference experience, taking place November 9 - 12, 2023 at the Anaheim Marriott. Check-in starts Thursday, November 9. Join us in a celebration of diversity across all fields.      
