--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -37,7 +37,7 @@ us in a celebration of diversity across all fields.
 
 </div>
 
-Pre-paid sponsor tickets included with sponsorship packages can still be redeemed until Friday, October 27 at 11:59 PM Pacific.
+Pre-paid exhibitor tickets included with sponsorship packages can still be redeemed until Friday, October 27 at 11:59 PM Pacific.
 
 <div className="my-2 flex flex-col items-center sm:flex-row justify-center">
   <div className="my-1 sm:mx-2">
