--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -37,7 +37,11 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <br />
       <b>
         {" "}
-        Full-conference tickets are SOLD OUT! Pre-paid exhibitor tickets may still be redeemed until registration closes.{" "}
+        ### Full-conference tickets are SOLD OUT!
+        
+        {" "}
+        Pre-paid exhibitor tickets may still be redeemed until registration closes.{" "}
+
         Expo & site tour registration closes October 27, 2023 at 11:59PM Pacific!{" "}
       </b>
     </p>
