--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -39,8 +39,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
         {" "}
         ### Full-conference tickets are SOLD OUT!
         
-        {" "}
-        Pre-paid exhibitor tickets may still be redeemed until registration closes.{" "}
+        Pre-paid exhibitor tickets may still be redeemed until registration closes.
 
         Expo & site tour registration closes October 27, 2023 at 11:59PM Pacific!{" "}
       </b>
