--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,9 +35,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       We are pleased to invite you to the 13th Annual Conference in Anaheim, California! We look forward to over 1,200 attendees across the world coming together for this four-day conference experience, taking place November 9 - 12, 2023 at the Anaheim Marriott. Check-in starts Thursday, November 9. Join us in a celebration of diversity across all fields.      
       <br />
       <br />
-      ### Full-conference tickets are SOLD OUT!
+      <h4> Full-conference tickets are SOLD OUT! </h4>
       <br />
         Pre-paid exhibitor tickets may still be redeemed until registration closes.
+      <br />
       <br />
       <b>
         {" "}
