--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -48,6 +48,17 @@ Pre-paid exhibitor tickets included with sponsorship packages can still be redee
 </div>
 <br />
 
+We hope you will join us next year in Portland, OR, when we move into a much larger venue to accommodate our growing community’s needs. Fill out the form below to be notified when tickets for oSTEM 2024 go on sale.
+
+<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
+  <div className="my-1 sm:mx-2">
+    <CTAButton onClick="https://form.jotform.com/232986540358062">
+      oSTEM 2024 Ticket Alert
+    </CTAButton>
+  </div>
+</div>
+<br />
+
 ### Attendee Registration
 
 There are 4 attendee ticket types:
