--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -31,7 +31,7 @@ us in a celebration of diversity across all fields.
 
 <div className="text-bright-peach font-bold text-center">
 
-## Conference & Expo Registration closes October 27
+## Expo-only Registration open until sold out
 
 ### Full-conference tickets are SOLD OUT! Expo and Site Tour tickets remain available.
 
