--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -42,7 +42,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <br />
       <b>
         {" "}
-        Expo & site tour registration closes October 27, 2023 at 11:59PM Pacific!{" "}
+        Limited expo & site tour spots are available.{" "}
       </b>
     </p>
     <div className="text-xl flex justify-center p-2">
