--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -85,9 +85,9 @@ times are Pacific Time and are subject to change.
 - **2:00 PM - 3:00 PM:** Poster Session
 - **3:00 PM - 4:00 PM:** Mixers
 - **4:00 PM - 5:30 PM:** Plenary Keynote
-- **5:45 PM - 6:45 PM:** Workshop Block 6
+- **5:35 PM - 6:35 PM:** Workshop Block 6
 - **7:00 PM - 8:30 PM:** Evening Networking Reception (Sponsored)
-- **TBA:** Evening Social hosted by oSTEM
+- **8:00 PM - 10:00 PM:** Evening Social hosted by oSTEM
 
 <br />
 
