--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -86,7 +86,7 @@ times are Pacific Time and are subject to change.
 - **3:00 PM - 4:00 PM:** Mixers
 - **4:00 PM - 5:30 PM:** Plenary Keynote
 - **5:35 PM - 6:35 PM:** Workshop Block 6
-- **7:00 PM - 8:30 PM:** Evening Networking Reception (Sponsored)
+- **7:00 PM - 8:30 PM:** Evening Networking Receptions (Sponsored)
 - **8:00 PM - 10:00 PM:** Evening Social hosted by oSTEM
 
 <br />
