--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -99,7 +99,9 @@ times are Pacific Time and are subject to change.
 
 - **8:00 AM - 2:00 PM:** Help Desk
 - **9:00 AM - 12:00 PM:** Organizational Advisory Council (OAC) Meeting #1
-- **9:00 AM - 12:00 PM:** Gender Affirmation Symposium
+- **9:00 AM - 11:00 AM:** Creative Space for Gender Expression
+- **9:00 AM - 11:00 AM:** Together We THRIVE: Creating Mental Health Safe Communities
+- **9:00 AM - 10:00 AM:** Volunteeringn with oSTEM
 
 <br />
 <hr />
