--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -31,9 +31,9 @@ us in a celebration of diversity across all fields.
 
 <div className="text-bright-peach font-bold text-center">
 
-## Expo-only Registration open until sold out
+## Expo-only Registration open - limited availability!
 
-### Full-conference tickets are SOLD OUT! Expo and Site Tour tickets remain available.
+### Full-conference tickets are SOLD OUT!
 
 </div>
 
