--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -101,7 +101,7 @@ times are Pacific Time and are subject to change.
 - **9:00 AM - 12:00 PM:** Organizational Advisory Council (OAC) Meeting #1
 - **9:00 AM - 11:00 AM:** Creative Space for Gender Expression
 - **9:00 AM - 11:00 AM:** Together We THRIVE: Creating Mental Health Safe Communities
-- **9:00 AM - 10:00 AM:** Volunteeringn with oSTEM
+- **9:00 AM - 10:00 AM:** Volunteering with oSTEM
 
 <br />
 <hr />
