--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -20,7 +20,7 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 <br />
 
 We are pleased to invite you to the 13th Annual Conference in Anaheim,
-California! We look forward to over 1,000 attendees across the world coming
+California! We look forward to over 1,100 attendees across the world coming
 together for this four-day conference experience, taking place **November 9 -
 12, 2023** at the Anaheim Marriott. Check-in starts Thursday, November 9. Join
 us in a celebration of diversity across all fields.
@@ -31,20 +31,12 @@ us in a celebration of diversity across all fields.
 
 <div className="text-bright-peach font-bold text-center">
 
-## Expo-only Registration open - limited availability!
-
-### Full-conference tickets are SOLD OUT!
+## Conference registration is SOLD OUT!
 
 </div>
 
 Pre-paid exhibitor tickets included with sponsorship packages can still be redeemed until Friday, October 27 at 11:59 PM Pacific.
 
-<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
-  <div className="my-1 sm:mx-2">
-    <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/">
-      Register Today!
-    </CTAButton>
-  </div>
 </div>
 <br />
 
