--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -32,18 +32,11 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">Conference & Site Tour Registration Closes Soon</h3>
     </div>
     <p className="p-4">
-      We are pleased to invite you to the 13th Annual Conference in Anaheim, California! We look forward to over 1,200 attendees across the world coming together for this four-day conference experience, taking place November 9 - 12, 2023 at the Anaheim Marriott. Check-in starts Thursday, November 9. Join us in a celebration of diversity across all fields.      
+      We are pleased to welcome our community to the 13th Annual Conference in Anaheim, California! We look forward to over 1,100 attendees across the world coming together for this four-day conference experience, taking place November 9 - 12, 2023 at the Anaheim Marriott. Check-in starts Thursday, November 9. Join us in a celebration of diversity across all fields.     
       <br />
       <br />
       <h4> Full-conference tickets are SOLD OUT! </h4>
       <br />
-        Pre-paid exhibitor tickets may still be redeemed until registration closes.
-      <br />
-      <br />
-      <b>
-        {" "}
-        Limited expo & site tour spots are available.{" "}
-      </b>
     </p>
     <div className="text-xl flex justify-center p-2">
       <CTAButton onClick="/2023/registration" backgroundColor="bright-peach">
