--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -29,18 +29,18 @@ import { SiteLayout } from "../components/layout/SiteLayout";
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
     <div className="bg-light-peach">
-      <h3 className="p-4">Conference & Site Tour Registration Closes Soon</h3>
+      <h3 className="p-4">Conference Registration Is Closed</h3>
     </div>
     <p className="p-4">
       We are pleased to welcome our community to the 13th Annual Conference in Anaheim, California! We look forward to over 1,100 attendees across the world coming together for this four-day conference experience, taking place November 9 - 12, 2023 at the Anaheim Marriott. Check-in starts Thursday, November 9. Join us in a celebration of diversity across all fields.     
       <br />
       <br />
-      <h4> Full-conference tickets are SOLD OUT! </h4>
+      Whether or not we will see you in Anaheim, we hope you will join us next year in Portland, OR, when we move into a much larger venue to accommodate our growing community’s needs. Fill out the form below to be notified when tickets for oSTEM 2024 go on sale.
       <br />
     </p>
     <div className="text-xl flex justify-center p-2">
-      <CTAButton onClick="/2023/registration" backgroundColor="bright-peach">
-        Register
+      <CTAButton onClick="https://form.jotform.com/232986540358062" backgroundColor="bright-peach">
+        oSTEM 2024 Ticket Alert
       </CTAButton>
     </div>
   </div>
