--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -130,14 +130,7 @@ is the premier LGBTQ+ in STEM event! List of exhibitors coming soon!
 If you would like to recruit at oSTEM, please email sponsorship@ostem.org.
 
 \* Residents and students in California are eligible for a complimentary Two-Day
-Expo Only Registration to attend the **Career Fair & Grad School Expo.** Please
-complete this form to sign up for a free ticket. _Exhibitors are not eligible._
-
-<div className="my-2">
-  <CTAButton onClick="https://form.jotform.com/232814643539158">
-    CA Resident Expo Tickets
-  </CTAButton>
-</div>
+Expo Only Registration to attend the **Career Fair & Grad School Expo.** Expo ticket registration has closed.
 
 </TopicSquare>
 
@@ -172,7 +165,7 @@ options will be added.
 
 ### Exhibitor / Recruiter Registration
 
-**Exhibitor / Recruiter registration is OPEN for 2023. **
+**Exhibitor / Recruiter registration is closed for 2023. **
 
 If you are a recruiter or exhibitor and have questions, please reach out to
 sponsorship@ostem.org.
