--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -67,7 +67,7 @@ times are Pacific Time and are subject to change.
 - **12:30 PM - 1:30 PM:** Workshop Block 3 (Lunch provided)
 - **1:30 PM - 5:30 PM:** Career and Graduate School Expo
 - **4:30 PM - 5:30 PM:** Workshop Block 4
-- **5:30 PM - 7:00 PM:** Chapter & Volunteer Award Ceremony
+- **5:30 PM - 7:00 PM:** Community Award Ceremony
 - **7:00 PM - 9:00 PM:** Evening Networking Receptions (Sponsored)
 
 <br />
