--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -19,6 +19,14 @@ import Image from "next/image";
 />
 <br />
 
+<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
+  <div className="my-1 sm:mx-2">
+    <CTAButton onClick="https://ostemfilestorage.blob.core.windows.net/publicfiles/oSTEM2023_Abstract_Book.pdf">
+      2023 Poster Abstract Book
+    </CTAButton>
+  </div>
+</div>
+
 Out in Science, Technology, Engineering, and Mathematics (oSTEM) is no longer
 accepting poster proposals for the in-person 13th Annual oSTEM Conference 2023.
 
