--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -51,8 +51,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
   <div className="rounded-b md:col-span-5 p-4 bg-tint-seamist">
     <h3>Conference for LGBTQ+ People in STEM</h3>
     <p>
-      The 13th Annual oSTEM Conference will take place in Anaheim, California
-      with 1,000+ LGBTQ+ students, professionals, and recruiters in STEM fields
+      The 14th Annual oSTEM Conference will take place in Portland, OR
+      with 1,100+ LGBTQ+ students, professionals, and recruiters in STEM fields
       from across the country and around the globe. This space is designed for
       attendees to share their professional and personal experiences and learn
       from one another in an authentic and vulnerable way. Programs and content
@@ -61,9 +61,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       research conducted by our members). The Career & Graduate School Expo
       allows attendees to connect and network with professionals, academics, and
       colleagues from STEM industries and universities. For more examples of
-      sessions, speakers, and career expo exhibitors, click here for the 2022
-      conference program. If you want a space where you can be your authentic
-      LGBTQ+ self and your authentic STEM self, this is the conference for you.
+      sessions, speakers, and career expo exhibitors, visit the "2022 Recap" page. If you want a space where you can be your authentic
+      LGBTQ+ self and your authentic STEM self, this is the conference for you!
     </p>
   </div>
 </div>
