--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -16,7 +16,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 <div className="grid md:grid-cols-5 mt-9">
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-chill-green border-solid pb-4">
     <div className="bg-chill-green">
-      <h3 className="p-4">Upcoming Dates</h3>
+      <h3 className="p-4">2013 Conference Deadlines</h3>
     </div>
     <p className="p-4">
       <b>Full Conference Registration:</b> SOLD OUT <br />
