--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,7 +8,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 
 <div className="border-b-4 border-chill-green border-solid pb-4 text-center">
   <img
-    alt="13th Annual oSTEM Conference 2023 from November 9 – 12, 2023 in Anaheim, CA. website www.conference.ostem.org"
+    alt="14th Annual oSTEM Conference 2024 from October 17-20, 2024 in Portland, OR. website www.conference.ostem.org"
     src="/images/2023/2023conference_header.png"
     className="flex w-200 mx-auto"
   />
