--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -19,12 +19,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">2024 Conference Deadlines</h3>
     </div>
     <p className="p-4">
-      <b>Full Conference Registration:</b> SOLD OUT <br />
-      <b>Chapter Award Nominations:</b> Closed September 8, 2023 <br />
-      <b>Call for Posters:</b> Closed September 30, 2023 <br />
-      <b>Early Bird Registration:</b> Closed August 14, 2023 <br />
-      <b>Full-Priced Registration:</b> August 15, 2023 - October 8, 2023 <br />
-      <b>Late Registration:</b> October 9 - October 27, 2023 <br />
+      <b>Request for Proposals:</b> May 31, 2024 <br />
+      <b>Early Bird Registration:</b> TBD <br />
     </p>
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
