--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -20,7 +20,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     </div>
     <p className="p-4">
       <b>Request for Proposals:</b> May 31, 2024 <br />
-      <b>Early Bird Registration:</b> TBD <br />
+      <b>Early Bird Registration:</b> TBD, early summer <br />
     </p>
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
