--- a/src/pages/archive/2022/home.mdx
+++ b/src/pages/archive/2022/home.mdx
@@ -45,7 +45,7 @@ import { SiteLayout } from "../../../components/layout/SiteLayout";
             <div className="bg-tint-deepwater-light">
                 <h3 className="p-4">Request for Proposals</h3>
             </div>
-            <p className="p-4">
+            <p className="p-4">`
                 We are no longer accepting proposals for 2022. oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
                 Our conference offers a unique opportunity for LGBTQ individuals in STEM to present to an audience of peers. 
                 Come be a part of the foundational experience and submit a program today! 
