--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -22,6 +22,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <b>Request for Proposals:</b> May 31, 2024 <br />
       <b>Early Bird Registration:</b> TBD <br />
     </p>
+    <p className='p-4'>Request for proposals now open!</p>
+    <div className="text-xl flex justify-center p-2">
+        <CTAButton onClick="/2024/rfp" backgroundColor="ostem-blue"> Submit your Proposal</CTAButton>
+    </div>
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
     <div className="bg-light-peach">
