Bugfix - collegiate category

--- a/src/pages/2024/rfp.mdx
+++ b/src/pages/2024/rfp.mdx
@@ -75,8 +75,10 @@ A description of each submission category is provided below:
 
 **Owning Your Identity On and Off Campus** - Programs submitted in this category will describe different lived experiences in order to foster relationships outside the bubble of a college campus resource center. Workshops will explore different identities and how these identities can shape a college experience. These sessions would also encompass navigating difficult conversations with University leadership and how to make effective change on campus.
 
-  - Submissions will focus on next-steps to take when looking to stay in an academic setting. This may include but is not limited to: choosing a graduate program (PhD, JD, MD, PharmD), looking for a postdoc position, and applying for faculty positions. 
+**Advancing in Academia** - Submissions will focus on next-steps to take when looking to stay in an academic setting. This may include but is not limited to: choosing a graduate program (PhD, JD, MD, PharmD), looking for a postdoc position, and applying for faculty positions. 
 Other Relevant Topics - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and queer populations in an academic setting. 
+
+**Other Relevant Topics** - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and queer populations in an academic setting. 
 
 
 <div className="text-bright-peach font-bold">
