Update media w/ Abby's new media

--- a/src/pages/2024/rfp.mdx
+++ b/src/pages/2024/rfp.mdx
@@ -9,14 +9,9 @@ import Image from "next/image";
   <p className="text-5xl font-display font-black">Requests for Proposals</p>
 </div>
 
-<Image
-  src="/images/2022-11-12 oSTEM_2489.jpg"
-  alt=""
-  layout="responsive"
-  width="400"
-  height="180"
-  priority="true"
-/>
+<picture>
+    <img src="/images/2024/2024_rfp_horizontal.png" alt="Graphical timeline for the 2024 RFP process"/>
+</picture>
 
 <div className="text-bright-peach font-bold">
 
@@ -24,7 +19,7 @@ import Image from "next/image";
 
 </div>
 
-oSTEM is now accepting program proposals for the 14th Annual oSTEM Conference
+oSTEM is now accepting program proposals for the 14th Annual oSTEM Conference.
 
 Successful programs will align with oSTEM’s mission and core values: *integrity, intentionality, respect, passion, and grit*. 
 
@@ -52,8 +47,7 @@ Based on previous feedback, oSTEM is excited to introduce three tracks for the 2
 
 **Industry:** This track aims to engage individuals that are currently in the workforce or are imminently prepared to enter the workforce. These topics will focus on how to better engage your employer and advocate for LGBT+ populations during your work day. This can be anecdotal accomplishments or tips on how to effectively develop a queer network in a professional setting. 
 
-**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2024 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBT+ Population, and Sustainable Engineering 
-
+**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2024 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBT+ Population, and Sustainable Engineering.
 
 <div className="text-bright-peach font-bold">
 
@@ -173,6 +167,15 @@ Your proposal must include the following components:
     </tr>
   </tbody>
   </table>
+
+<Image
+  src="/images/2022-11-12 oSTEM_2489.jpg"
+  alt="A photo showing three presenters from the 2022 conference speaking."
+  layout="responsive"
+  width="400"
+  height="180"
+  priority="true"
+/>
 
 <div className="text-bright-peach font-bold">
 
