Preview navbar + tech stack upgrade

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,7 @@
 import Image from "next/image";
 
 import { CTAButton } from "../components/button/CTAButton";
-import { ConferenceCountdown } from "../components/ConferenceCountdown";
+// import { ConferenceCountdown } from "../components/ConferenceCountdown";
 import { SiteLayout } from "../components/layout/SiteLayout";
 
 <SiteLayout>
