Minor layout fixes/changes

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -24,7 +24,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     </p>
     <p className='p-4'>Request for proposals now open!</p>
     <div className="text-xl flex justify-center p-2">
-        <CTAButton onClick="/2024/rfp" backgroundColor="ostem-blue"> Submit your Proposal</CTAButton>
+        <CTAButton onClick="/2024/rfp" backgroundColor="ostem-blue" target='_self'> Submit your Proposal</CTAButton>
     </div>
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
