Minor text updates

--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -11,7 +11,7 @@ import Image from "next/image";
 
 <Image
   src="/images/partnership-banner-image.jpg"
-  alt=""
+  alt="Decorative banner image showing three oSTEM attendees looking into the camera at a previous oSTEM national conference."
   layout="responsive"
   width="400"
   height="167"
@@ -55,7 +55,7 @@ member of our community.
 <div className="flex flex-col items-center text-xl my-4">
   <div className="pb-4">
     <CTAButton
-      onClick="https://ostemfilestorage.blob.core.windows.net/publicfiles/oSTEM2024ProspectusAnnualConference.pdf"
+      onClick="https://cdn.ostem.org/publicfiles/oSTEM2024ProspectusAnnualConference.pdf"
       backgroundColor="bright-peach"
     >
       View our Partnership Prospectus
@@ -95,7 +95,7 @@ sponsorship@ostem.org.
 ### <div>oSTEM Partner Standards</div>
 
 <div>
-  Minimum requirement to be a sponsor or exhibitor at the 13th Annual 
+  Minimum requirement to be a sponsor or exhibitor at the 14th Annual 
 Conference:
 
 <div className="my-4">
