One more text fix

--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -95,7 +95,7 @@ sponsorship@ostem.org.
 ### <div>oSTEM Partner Standards</div>
 
 <div>
-  Minimum requirement to be a sponsor or exhibitor at the 14th Annual 
+  Minimum requirement to be a sponsor or exhibitor at the Annual 
 Conference:
 
 <div className="my-4">
