--- a/src/pages/2024/rfp.mdx
+++ b/src/pages/2024/rfp.mdx
@@ -3,10 +3,10 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Request for Proposals">
+<SiteLayout title="Request for Programs">
 
 <div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Requests for Proposals</p>
+  <p className="text-5xl font-display font-black">Requests for Programs</p>
 </div>
 
 <picture>
