Package upgrades. More navbar animations.

--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -1,6 +1,7 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
 import { CTAButton } from "../../components/button/CTAButton";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
+import Image from "next/image";
 
 <SiteLayout title="Registration">
 
